# coalition-2

./: LICENCE  README.rst  pyproject.toml  setup.py
src/: bashrc3  get_input_msg_py3.py  input_MSG_py3.py  input_coalition2.py  input_coalition2_cscs.py  my_msg_module_py3.py  plot_coalition2_py3.py  produce_forecasts_nrt_py3.py  scp_settings.py
